# aiml

./: .env  .gitignore  Advanced_Probability_Foundations_Lecture_6.ipynb  README.md  chatgpt.md  desktop.ini  pyproject.toml  rough.txt  test.ipynb
module-1/: numpy.ipynb  pandas-2.ipynb  probability.ipynb
module-1/notes/: probability.ipynb
module-2/notes/: linear-algebra-4.ipynb
module-3/notes/: Gradient+Descent+Practice+Question+Solution_LR_3.ipynb  Housing_LR_3.ipynb  Linear_Regression_2.1.ipynb
practice/: amazon-sales-1.ipynb  matplotlib-practice.ipynb  pandas-practice.ipynb  probability-practice.ipynb  rough.ipynb
